fixed failure on empty tracking response